[package]
name = "webapi"
version = "0.1.0"
authors = ["Oliver Leitner"]
edition = "2018"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix = "0.11"
#actix-web = "3"
actix-web-httpauth = "0.5"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.13"
actix-service = "1.0"
alcoholic_jwt = "1.0"
#actix-rt = "2.1"
reqwest = "0.11.2"
futures = "0.3"
json = "0.12"
#serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4.0"
log4rs = "1.0.0"
env_logger = "0.8.3"
diesel = { version = "1.4", features = ["mysql", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
r2d2 = "0.8"
bigdecimal = { version = "0.2.0", features = ["serde"] }
mysql_common = "0.26.0"
actix = "0.11.0"
actix-web = "3.3.2"
actix-rt = "1.1"
actix-utils = "2.0.0"
serde = { version = "1.0.123", features = ["derive"] }
jsonwebtoken = "7.2"
envfile = "0.2.1"
rust-crypto = "0.2.36"
hostname = "0.3.1"
